se crea consulta para nombre de zona electoral por codigo :zap:modificacion de zona electoral en tab 2 info cabeza plancha

--- a/ELE.web/WebRoot/gui/planchas/registrarInfoCabezaPlancha.jspx
+++ b/ELE.web/WebRoot/gui/planchas/registrarInfoCabezaPlancha.jspx
@@ -157,11 +157,13 @@ if (self === top) {
 																	<ice:outputText value="#{etiquetas.lblNumeroPlancha}"
 																		styleClass="textoLabel" />
 																</td>
-																<td>
+																<td>																
 																	<div align="left">
 																		<ice:outputText
-																			value="#{registrarInfoCabezaPlancha.dto.numeroPlancha}"
+																			value=""
 																			styleClass="textoInput" />
+																		<!-- modificacion 30/10/2021 se requiere no mostrar este campo al asociado -->
+																		<!-- value="#{registrarInfoCabezaPlancha.dto.numeroPlancha}" -->
 																	</div>
 																</td>
 
