--- a/ELE.web/WebRoot/gui/forms/enviarRadicacion.jspx
+++ b/ELE.web/WebRoot/gui/forms/enviarRadicacion.jspx
@@ -10,121 +10,155 @@
 <head>
 <title>Formulario de env&#237;o de Radicaci&#243;n</title>
 <link rel="stylesheet" type="text/css"
-	href="../estilos/rime/rime-portlet.css" />
+	href="../estilos/rime/rime-portlet2.css" />
 <link rel="stylesheet" type="text/css"
 	href="../estilos/estiloPlanchas.css" />
-<meta http-equiv="Cache-Control" content="no-cache" />
-<script type="text/javascript" src="../js/utilidades.js"></script>
-<script type="text/javascript" src="../js/servletInvoker.js"></script>
 <script type="text/javascript" language="JavaScript"
-	src="../js/validaNumeroJSF.js">
+	src="#{facesContext.externalContext.request.scheme}://#{facesContext.externalContext.request.serverName}:#{facesContext.externalContext.request.serverPort}#{facesContext.externalContext.request.contextPath}/gui/js/validaNumeroJSF.js">
 	
 </script>
+<script type="text/javascript" src="../js/servletInvoker.js">
+	
+</script>
+<style id="antiClickjack">
+body {
+	display: none !important;
+}
+</style>
+<script type="text/javascript">
+	if (self === top) {
+		var antiClickjack = document.getElementById("antiClickjack");
+		antiClickjack.parentNode.removeChild(antiClickjack);
+	} else {
+		top.location = self.location;
+	}
+</script>
+
+<meta http-equiv="Cache-Control" content="no-cache" />
 <f:loadBundle basename="co.com.coomeva.ele.etiquetas.etiquetas"
 	var="etiquetas" />
 </head>
 <body bgcolor="#DFDFDF">
 
+
 	<ice:form partialSubmit="true">
 		<div align="center">
-			<table cellpadding="0" cellspacing="0" width="824" border="0"
-				bgcolor="#FFFFFF">
+
+			<table cellpadding="0" cellspacing="0" width="824" bgcolor="#FFFFFF">
 				<!-- BANNER -->
 				<tr>
-					<td colspan="2">
+					<td>
 						<div align="left" class="banner"></div>
 					</td>
 				</tr>
 				<!-- NOMBRE DE ASOCIADO -->
-				<tr>
-					<td align="left" style="background: white" valign="top" colspan="2">
-						<ice:panelGrid columns="3">
-							<ice:outputText value="#{etiquetas.saludoRegistroPlanchas}"
-								style="font-size: 11px; font-weight: bold" />
-							<ice:outputText
-								value="#{validacionIngreso.asociado.nombreAsociado}"
-								style="font-size: 11px" />
-						</ice:panelGrid>
-					</td>
-				</tr>
+
+				<td align="left" style="background: white" valign="top"><ice:panelGrid
+						columns="2">
+						<ice:outputText value="#{etiquetas.saludoRegistroPlanchas}"
+							style="font-size: 11px; font-weight: bold" />
+						<ice:outputText
+							value="#{validacionIngreso.asociado.nombreAsociado}"
+							style="font-size: 11px" />
+					</ice:panelGrid></td>
+
 				<!-- MENU ASOCIADO -->
 				<tr>
-					<td align="center" style="background: white; width: 706px;">
-						<jsp:directive.include
-							file="../planchas/menuPlanchasAsociado.jsp" />
-					</td>
-				</tr>
-				<tr>
-					<td colspan="2" bgcolor="#FFFFFF"><br /></td>
-				</tr>
-
-				<!-- GENERACION DE REPORTE -->
-				<tr>
-					<td bgcolor="#FFFFFF">
-						<table align="right" width="100%" border="0" cellspacing="0"
-							cellpadding="0">
-							<tr>
-								<td>
-									<div align="center">
-										<ice:outputLabel value="#{etiquetas.lblMenuEnviarRadicacion}"></ice:outputLabel>										
-									</div>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<div align="center">
-										<ice:outputLabel value="#{etiquetas.textInfoEnvioRadicacion}"></ice:outputLabel>
-									</div>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<div align="center">
-										<ice:outputText value="Firma virtual" style="font-size: 11px" />
-										<ice:selectBooleanCheckbox value="" />
-										<ice:outputText value="Firma presencial"
-											style="font-size: 11px" />
-										<ice:selectBooleanCheckbox value="" />
-									</div>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<center>
-										<br />
-										<ice:commandButton value="enviar" />
-									</center>
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-				<tr>
-					<td colspan="2" bgcolor="#FFFFFF"></td>
-				</tr>
-				<tr>
-					<td colspan="2" bgcolor="#FFFFFF"><br /></td>
-				</tr>
-				<tr>
-					<td width="130" align="left" valign="top" bgcolor="#FFFFFF">
-						<br />
-						<br />
-					</td>
-					<td align="center" bgcolor="#FFFFFF">
-						<br />
-						<br />
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<div align="center">
+					<td valign="top">
+						<div align="left">
 							<jsp:directive.include
-								file="../popup/popupMensajeExcepcionPlanchas.jsp" />
+								file="../planchas/menuPlanchasAsociado.jsp" />
 						</div>
 					</td>
 				</tr>
+				<tr>
+					<td colspan="2" bgcolor="#FFFFFF"><br /></td>
+				</tr>
+				<!-- GENERACION DE REPORTE -->
+				<tr style="height: 250px">
+					<td bgcolor="#FFFFFF" align="left" valign="top">
+						<div align="center">
+							<table align="right" width="100%" border="0" cellspacing="0"
+								cellpadding="0">
+								<tr>
+									<td>
+										<div align="center">
+											<ice:outputLabel value="#{etiquetas.lblMenuEnviarRadicacion}"></ice:outputLabel>
+										</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<div align="center">
+											<ice:panelCollapsible expanded="true" toggleOnClick="false"
+												style="width:80%">
+												<f:facet name="header">
+													<ice:outputText id="ttlOpcionesFirma"
+														value="#{etiquetas.lblTipoFirma}" />
+												</f:facet>
+												<ice:outputText value="#{etiquetas.textInfoEnvioRadicacion}" />
+												<ice:panelGrid columns="1" width="45%"
+													styleClass="textoLabel">
+													<ice:selectOneRadio
+														value="#{enviarRadicacionVista.opcionFirma}"
+														valueChangeListener="#{enviarRadicacionVista.action_cambioDeFirma}">
+														<f:selectItems
+															value="#{enviarRadicacionVista.listaOpcionFirma}" />
+													</ice:selectOneRadio>
+												</ice:panelGrid>
+											</ice:panelCollapsible>
+										</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<div align="center">
+											<ice:panelCollapsible expanded="true" toggleOnClick="false"
+												style="width:80%">
+												<f:facet name="header">
+													<ice:outputText id="ttlDetallePendientes"
+														value="#{etiquetas.lblDetallePendientes}" />
 
+												</f:facet>
+												<ice:outputText value="#{etiquetas.textInfoEnvioRadicacion}" />
+
+												<ice:dataTable id="tblPendientes" var="observaciones"
+													value="#{enviarRadicacionVista.pendientes.observacionesInhabilidades}"
+													style="width:100%; height:100%;align:center">
+
+													<ice:column>
+														<center>
+															<ice:inputText value="#{observaciones}"
+																partialSubmit="false" style="width:100%;"
+																styleClass="textoLabel" readonly="true" />
+														</center>
+													</ice:column>
+												</ice:dataTable>
+
+											</ice:panelCollapsible>
+										</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<center>
+											<br />
+											<ice:commandButton value="#{etiquetas.btnEnviarRadicacion}"
+												disabled="#{enviarRadicacionVista.existenPendientes}" />
+										</center>
+									</td>
+								</tr>
+								<tr>
+									<td colspan="2" bgcolor="#FFFFFF"><br /></td>
+								</tr>
+							</table>
+						</div>
+					</td>
+				</tr>
 			</table>
+
+			<jsp:directive.include
+				file="../popup/popupMensajeExcepcionPlanchas.jsp" />
 		</div>
 	</ice:form>
 </body>
